# Text-to-SQL

./: README.md  app.py  database.py  pyproject.toml  student.db
utils/: db_utlis.py  model_utils.py
