[project]
name = "text-to-sql"
version = "0.1.0"
description = "Convert natural language queries into SQL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "langchain[groq]>=0.3.19",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.2",
]
